err/pi-app.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Adafruit_CharLCD'...
Listing './lib/python3.5/site-packages/Adafruit_CharLCD-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/Adafruit_GPIO'...
Listing './lib/python3.5/site-packages/Adafruit_GPIO-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/Adafruit_PureIO'...
Listing './lib/python3.5/site-packages/Adafruit_PureIO-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pi_app'...
Compiling './lib/python3.5/site-packages/pi_app/pi_app.py'...
***   File "./lib/python3.5/site-packages/pi_app/pi_app.py", line 79
    except KeyboardInterrupt, SystemExit:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pi_app-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spidev-3.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
